--- a/Slides/Linkages3D/settings.tex
+++ b/Slides/Linkages3D/settings.tex
@@ -72,6 +72,8 @@
 
 \usepackage{amsmath}
 \usepackage{mathtools}
+\usepackage{mathrsfs}
+
 
 \usepackage{subcaption}
 
@@ -91,8 +93,8 @@
     #1 & #2
     \end{bmatrix}}
  
- \newcommand{\R}{\mathbb{R}}   
- \newcommand{\T}{^\top}   
+ \newcommand{\R}{\mathbb{R}} 
+ \newcommand{\T}{^\top}     
     
 
 \newcommand{\mydate}{Fall 2022}
