--- a/Slides/Introduction/main.tex
+++ b/Slides/Introduction/main.tex
@@ -369,8 +369,8 @@ A \emph{point mass} is an object characterized by its position $\bo{r} \in \R^3$
 			$$
 			=
 			\begin{bmatrix}
-				l_1 \dot q_1\cos (q_1) + l_2 (\dot q_1+\dot q_2) \cos (q_1+q_2) \\ 
-				- l_1 \dot q_1\sin (q_1)  - l_2 (\dot q_1+\dot q_2) \sin (q_1+q_2) 
+				l_1 \cos (q_1) + l_2  \cos (q_1+q_2) \\ 
+				- l_1 \sin (q_1)  - l_2 \sin (q_1+q_2) 
 			\end{bmatrix}
 		$$
 		
