--- a/Slides/Linkages3D/main.tex
+++ b/Slides/Linkages3D/main.tex
@@ -4,7 +4,7 @@
 
 
 \title{3D linkages}
-\subtitle{Fundamentals of Robotics, Lecture 2}
+\subtitle{Fundamentals of Robotics, Lecture 3}
 \author{by Sergei Savin}
 \centering
 \date{\mydate}
@@ -15,68 +15,213 @@
 \maketitle
 
 
-%\begin{frame}{Content}
-%
-%%\begin{itemize}
-%%\item Motivation
-%%\item Ordinary differential equations
-%%\item Linear differential equations
-%%\item Changing n-th order ODE to a State-Space form
-%%\item State-Space to ODE
-%%\item Read more
-%%\end{itemize}
-%
-%\end{frame}
 
 
-
-\begin{frame}{Basis}
+\begin{frame}{Frame - introduction}
 	%\framesubtitle{1st order}
 	\begin{flushleft}
 		
-		
-		Three linearly independent vectors $\bo{v}_1$, $\bo{v}_2$ and $\bo{v}_3$ in $\R^3$ form a \emph{basis} $\mathcal V$ - which means any vector in $\R^3$ can be represented as a linear combination of $\bo{v}_1$, $\bo{v}_2$ and $\bo{v}_3$.
-		
-		\bigskip
-		
-		If  $||\bo{v}_i|| = 1$ and  $\bo{v}_1 \cdot \bo{v}_2 = 0$, $\bo{v}_2 \cdot \bo{v}_3 = 0$, $\bo{v}_3 \cdot \bo{v}_1 = 0$, then the basis is called orthonormal.
+		Consider a vector $\bo{v}$. As we noted in the previous lecture, we can express it in terms of its coordinates in a basis of of choice. Or - we can just leave it alone. Examples of vectors in Robotics are linear and angular velocities, as well as accelerations.
 		
 		\bigskip
 		
-		If $\bo{V} = [\bo{v}_1 \ \bo{v}_2 \ \bo{v}_3]$ is an orthonormal basis, then:
+		Consider a point $P$ in Euclidean space $\mathcal E$. Given some other point $O$ we can associate a vector $\bo{r}_{OP}$ with any point $P \in \mathcal E$ as difference in position of points $P$ and $O$. We call point $O$ origin. Origin and basis together form a \emph{frame}.
+		
+	\end{flushleft}
+\end{frame}
+
+\begin{frame}{Frame - introduction}
+	%\framesubtitle{1st order}
+	\begin{flushleft}
+		
+		Notice that to find coordinates of a vector we only need a basis, while for a point we also need an origin - in other words, we need a frame to express a point.
+		
+	\end{flushleft}
+\end{frame}
+
+
+\begin{frame}{Frame - basic example}
+	%\framesubtitle{1st order}
+	\begin{flushleft}
+		
+		Consider the following example. We know coordinates of $\mathbf r_{OP} $ expressed in basis $\mathcal V$, and we know $\mathbf r_{OA}$, also expressed in $\mathcal V$. Can express  $\mathbf r_{AP}$ in $\mathcal V$?
+		
+		\bigskip
+		
+		We know that $\mathbf r_{OP} = P - O$ and $\mathbf r_{OA} = A - O$ and $\mathbf r_{AP} = P - A$, hence $\mathbf r_{AP} = \mathbf r_{OP} - \mathbf r_{OA}$, which is true in any basis (of course, to sum coordinates in a meaningful way they should be associated with the same basis).
+		
+		\bigskip
+		
+		To denote that $\mathbf r_{AP}$ is expressed in $\mathcal V$ we write it as $^{\mathcal V} \mathbf r_{AP}$.
+		
+	\end{flushleft}
+\end{frame}
+
+
+\begin{frame}{Sequence of frames}
+	%\framesubtitle{1st order}
+	\begin{flushleft}
+		
+		Another example. We have a point $K$ and frames $\mathcal F_1$ and $\mathcal F_2$, as well as a \emph{world frame}. Frame $\mathcal F_1$ given by its origin $O_1$ and basis $\mathcal T_1$. Frame $\mathcal F_2$ given by its origin $O_2$ and basis $\mathcal T_2$. 
+		
+		\bigskip
+		
+		We know position of point $O_1$ in the world frame (its coordinates with respect to the origin of the world frame, expressed in the world frame basis) - $^{\mathcal W}\bo{r}_{O1}$. Basis $\mathcal T_1$ is given by a matrix $^{\mathcal W}\mathbf T_1$ whose columns are coordinates of the vectors forming $\mathcal T_1$ expressed in the world frame.
+		
+		\bigskip
+		
+		We know position of point $O_2$ in the $\mathcal F_1$ frame - $^{\mathcal T_1}\bo{r}_{O1O2}$. Basis $\mathcal T_2$ is given by a matrix $^{\mathcal T_1}\mathbf T_2$ whose columns are coordinates of the vectors forming $\mathcal T_2$ expressed in the world frame.
+		
+		\bigskip
+		
+		Task - express $K$ in world frame given $^{\mathcal T_2}\bo{r}_{O2K}$ - position of $K$ in the frame $\mathcal F_2$. Scary.
+		
+	\end{flushleft}
+\end{frame}
+
+
+\begin{frame}{Sequence of frames}
+	%\framesubtitle{1st order}
+	\begin{flushleft}
+		
+		A good way to deal with these problems is to express every basis in terms of the world frame basis, and then do the same with all points.
+		
+		\bigskip
+		
+		First, we already have basis $\mathcal T_1$ in the world frame basis - $^{\mathcal W}\mathbf T_1$ . Now to express $\mathcal T_2$.
+		
+		\bigskip
+		
+		Given coordinates $^{\mathcal T_1}\mathbf T_2$ in $\mathcal T_1$ we can find $\mathbf T_2 = \mathbf T_1 \ ^{\mathcal T_1}\mathbf T_2$, hence 
+		$^{\mathcal W}\mathbf T_2 = ^{\mathcal W}\mathbf T_1 \ ^{\mathcal T_1}\mathbf T_2$.
+		
+	\end{flushleft}
+\end{frame}
+
+
+
+\begin{frame}{Sequence of frames}
+	%\framesubtitle{1st order}
+	\begin{flushleft}
+		
+		We already know $^{\mathcal W}\bo{r}_{O1}$ and we know $^{\mathcal T_1}\bo{r}_{O1O2}$. Vector $\bo{r}_{O1O2}$ is therefore:
+		
+		\begin{align}
+			\bo{r}_{O1O2} = \mathbf T_1  \  ^{\mathcal T_1}\bo{r}_{O1O2} \\
+			^{\mathcal W}\bo{r}_{O1O2} = ^{\mathcal W}\mathbf T_1  \  ^{\mathcal T_1}\bo{r}_{O1O2} 
+		\end{align}
+		
+		We remember that $\bo{r}_{O1O2} = O_2 - O_1$ and $\bo{r}_{O1} = O_1 - O$ (where $O$ is the world frame origin), and we want to find $\bo{r}_{O2} = O_2 - O$, so:
+		
+		\begin{align}
+			\bo{r}_{O2} = \bo{r}_{O1} + \bo{r}_{O1O2}
+			 \\
+			^{\mathcal W}\bo{r}_{O2} = ^{\mathcal W}\bo{r}_{O1} + ^{\mathcal W}\bo{r}_{O1O2}
+			\\
+			^{\mathcal W}\bo{r}_{O2} = ^{\mathcal W}\bo{r}_{O1} + ^{\mathcal W}\mathbf T_1  \  ^{\mathcal T_1}\bo{r}_{O1O2} 
+		\end{align}
+		
+	\end{flushleft}
+\end{frame}
+
+
+
+\begin{frame}{Sequence of frames}
+	%\framesubtitle{1st order}
+	\begin{flushleft}
+		
+		We know $^{\mathcal T_2}\bo{r}_{O2K}$, so vector $\bo{r}_{O2K}$ can be found as:
+		
+		\begin{align}
+			\bo{r}_{O2K} = \mathbf T_2 \  ^{\mathcal T_2}\bo{r}_{O2K}
+			 \\
+			 ^{\mathcal W} \bo{r}_{O2K} = ^{\mathcal W}\mathbf T_2 \  ^{\mathcal T_2}\bo{r}_{O2K}
+			 \\
+			 ^{\mathcal W} \bo{r}_{O2K} = ^{\mathcal W}\mathbf T_1 \ ^{\mathcal T_1}\mathbf T_2 \  ^{\mathcal T_2}\bo{r}_{O2K}
+		\end{align}
+		
+		Finally, we observe that $\bo{r}_{O2K} = K - O_2$, $\bo{r}_{O2} = O_2 - O$ and $\bo{r}_{K} = K - O$, so:
+		
+		\begin{align}
+			\bo{r}_{K} = \bo{r}_{O2} + \bo{r}_{O2K} 
+			\\
+			 ^{\mathcal W} \bo{r}_{K} =  ^{\mathcal W} \bo{r}_{O2} + ^{\mathcal W}  \bo{r}_{O2K} 
+			 \\
+			 ^{\mathcal W} \bo{r}_{K} =  
+			 ^{\mathcal W}\bo{r}_{O1} + 
+			 ^{\mathcal W}\mathbf T_1  \  ^{\mathcal T_1}\bo{r}_{O1O2}  +
+			 ^{\mathcal W}\mathbf T_1 \ ^{\mathcal T_1}\mathbf T_2 \  ^{\mathcal T_2}\bo{r}_{O2K}
+		\end{align}		
+		
+	\end{flushleft}
+\end{frame}
+
+
+
+
+\begin{frame}{Serial linkages}
+	%\framesubtitle{1st order}
+	\begin{flushleft}
+		
+		Consider a serial non-branching linkage. The $i$-th link has frame $\mathcal F_i$ attached to it, meaning the coordinates of any point on the link with respect to the frame do not change.
+		
+		\bigskip
+		
+		For simplicity, let us assume that the joint ($i$-th) by which the $i$-th link is attached (to its \emph{parent link}) has coordinates $[0, \ 0, \ 0]$ in the frame $\mathcal F_i$. The point $O_i$ is $i$-th joint and the origin of the frame $\mathcal F_i$; the basis associated with that frame is $\mathcal T_i$. We define vector $\bo{r}_{O_i O_{i+1}}$ pointing from the current joint to the next one. For the last $n$-th link we define $\bo{r}_{O_n K}$ vector pointing from the joint to the end-effector
+		
+		\bigskip
+		
+		We know $^{\mathcal T_i}\bo{r}_{O_i O_{i+1}}$ and $^{\mathcal T_i}\bo{T}_{i+1}$. We need to find everything in terms of world frame.
+		
+	\end{flushleft}
+\end{frame}
+
+
+
+\begin{frame}{Serial linkages}
+	%\framesubtitle{1st order}
+	\begin{flushleft}
+		
+		The process is rather simple. First consider rotations. We are given $^{\mathcal W}\bo{T}_1$, $^{\mathcal T_1}\bo{T}_2$, $^{\mathcal T_2}\bo{T}_3$, etc.
+		
+		\bigskip
+		
+		We can use our familiar arguments about coordinates to show that:
+		
+		\begin{align}
+			^{\mathcal W} \bo{T}_2 = 	^{\mathcal W} \bo{T}_1  \ ^{\mathcal T_1}\bo{T}_2 \\
+			^{\mathcal W} \bo{T}_3 = 	^{\mathcal W} \bo{T}_2 \ ^{\mathcal T_2}\bo{T}_3\\
+			^{\mathcal W} \bo{T}_{i+1} = 	^{\mathcal W} \bo{T}_i \ ^{\mathcal T_i}\bo{T}_{i+1}
+		\end{align}
+	
+	We find \emph{absolute orientation} of a link $^{\mathcal W} \bo{T}_i$ and then we can find absolute orientation of the next link just by using its local basis  $^{\mathcal T_i}\bo{T}_{i+1}$.
+	
+	You can think about it as "we know orientation of the previous link - next one needs just one more rotation, given by $^{\mathcal T_i}\bo{T}_{i+1}$".
+		
+	\end{flushleft}
+\end{frame}
+
+
+
+\begin{frame}{Serial linkages}
+	%\framesubtitle{1st order}
+	\begin{flushleft}
+		
+		Next, we take "translations". All vectors $^{\mathcal T_i}\bo{r}_{O_i O_{i+1}}$ are known to us in local coordinates. We can transfer then to world coordinates:
 		
 		\begin{equation}
-			\bo{V}\T \bo{V} = \bo{I} 
+			^{\mathcal W}\bo{r}_{O_i O_{i+1}} = ^{\mathcal W} \bo{T}_i \  ^{\mathcal T_i}\bo{r}_{O_i O_{i+1}}
 		\end{equation}
 	
-		Given a vector $\bo{r}$ we can find its coordinates in terms of  $ \bo{V}$ as:
-		
-		\begin{equation}
-			^\mathcal{V} \bo{r} =\bo{V}\T \bo{r}
-		\end{equation}		
+	With that, we can easily find position of any point on the robot, end-effector for instance:
 	
-		Note the abuse of notation: we talk interchangeably of about the basis $\mathcal V$ and matrix whose columns are the elements of the basis $\mathbf V$.
-		
-	\end{flushleft}
-\end{frame}
-
-
-
-\begin{frame}{World}
-	%\framesubtitle{1st order}
-	\begin{flushleft}
-		
-		
-		Consider a basis $\mathcal{V}$ defined via matrix $\bo{V} = [\bo{v}_1 \ \bo{v}_2 \ \bo{v}_3]$. If vectors $\bo{v}_i$ are actually given by their coordinates, we can consider these vectors as being expressed in a \emph{world} basis $\mathcal{W}$.
-		
-		\bigskip
-		
-		Given a vector $\bo{r}$, we can express it in terms of basis $\mathcal{V}$, denoting it with a left upper-script:  $^\mathcal{V} \bo{r}$. But we can also express it in the world basis as $^\mathcal{W} \bo{r}$. Relation between  $^\mathcal{V} \bo{r}$ and  $^\mathcal{W} \bo{r}$ is given as:
-		
 		\begin{equation}
-			 ^\mathcal{V} \bo{r} = \bo{V}\T  \ ^\mathcal{W} \bo{r} 
-		\end{equation}
-		
+	^{\mathcal W}\bo{r}_K = 
+	^{\mathcal W}\bo{r}_{O_1} +
+	^{\mathcal W}\bo{r}_{O_1 O_2} +
+	^{\mathcal W}\bo{r}_{O_2 O_3} + ... +
+	^{\mathcal W}\bo{r}_{O_n K}
+		\end{equation}	
 		
 	\end{flushleft}
 \end{frame}
@@ -84,253 +229,70 @@
 
 
 
-\begin{frame}{Frame}
+\begin{frame}{Rotation joints}
 	%\framesubtitle{1st order}
 	\begin{flushleft}
 		
-		An orthonormal basis $\bo{V} = [\bo{v}_1 \ \bo{v}_2 \ \bo{v}_3]$ and an origin point $ \bo{r}$ together form a frame $\mathcal{F}$. Usually we assume that $\bo{v}_3 = \bo{v}_1 \times \bo{v}_2$, $\bo{v}_1 = \bo{v}_2 \times \bo{v}_3$ and $\bo{v}_2 = \bo{v}_3 \times \bo{v}_1$.
+		How do we integrate joints into this discussion?
 		
 		\bigskip
 		
-		Given a point $\bo{p}$ we can find its coordinates in the frame $\mathcal{F}$:
-		
+		Remember rotation matrices:
+		%
 		\begin{equation}
-			^\mathcal{F} \bo{p} =\bo{V}\T (\bo{p} - \bo{r})
+			\bo{R}_x (\varphi_x) = 
+			\begin{bmatrix}
+				\cos \varphi_x & -\sin \varphi_x & 0 \\
+				\sin \varphi_x & \cos \varphi_x & 0 \\
+				0 & 0 & 1
+			\end{bmatrix}
 		\end{equation}
 	
-		\bigskip
-	
-		A few notes:
-		
-		\begin{itemize}
-			\item Vectors are usually expressed in terms of bases, points are usually expressed in terms of frames.
-			
-			\item Any point can be associated with a vector with the same coordinates, which can be expressed in a basis.
-		\end{itemize}
-		
+	\begin{equation}
+	\bo{R}_y (\varphi_y) = 
+	\begin{bmatrix}
+		\cos \varphi_y & 0 & \sin \varphi_y \\
+		0 & 1 & 0 \\
+		-\sin \varphi_y & 0 & \cos \varphi_y
+	\end{bmatrix}
+\end{equation}
+
+\begin{equation}
+	\bo{R}_z (\varphi_z) = 
+	\begin{bmatrix}
+		1 & 0 & 0 \\
+		0 & \cos \varphi_z & -\sin \varphi_z \\
+		0 & \sin \varphi_z & \cos \varphi_z 
+	\end{bmatrix}
+\end{equation}
+
+If your joint aligns with one of the principle axes of your parent basis, the transformation from the patent basis to the child basis can be defined by one of those matrices. That is quite common in practice.
 		
 	\end{flushleft}
 \end{frame}
 
 
 
-
-\begin{frame}{Geometry of a link}
+\begin{frame}{Rotation joints}
 	%\framesubtitle{1st order}
 	\begin{flushleft}
 		
-		
-		Consider a rigid body. We mark three points on that body: $C$, $B$ and $F$: center of mass, base and follower. We also define a basis $\mathcal{B}$ stationary with respect to the body $\mathcal{B} = [\bo{b}_x, \ \bo{b}_y, \ \bo{b}_z]$ and coordinates of these points in $\mathcal{B}$: $\bo{r}_C$, $\bo{r}_B$ and $\bo{r}_F$.
-		
-		\bigskip
-		
-		Considering vectors $\bo{b}_x$, $\bo{b}_y$ and $\bo{b}_z$ as expressed in terms of some default basis $\bo{I}$, we can find coordinates 
-		
-		
-		
-	\end{flushleft}
-\end{frame}
-
-
-
-\begin{frame}{One link robot}
-	%\framesubtitle{1st order}
-	\begin{flushleft}
-		
-		Let us consider a pendulum, described with angle $\varphi$ between its link and the vertical line. The length of the pendulum is given as $l$, point $\bo{r}_K$ is located at end of the pendulum.
+		Assume the $i$-th link is connected to the $i-1$ link via a pin joint aligned with the x-axes of the frame $\mathcal F_{i-1}$. Then, using our previous notation we get $ ^{\mathcal T_{i-1}}\bo{T}_i = \bo{R}_x (\varphi_i)$. We call it \emph{parametrization}. In this example $\varphi_i$ is a joint angle.
 		
 		\bigskip
 		
-		\begin{columns}
-			\begin{column}{0.5\textwidth}
-				\input{fig_onelink}
-			\end{column}
-			\begin{column}{0.5\textwidth}  %%<--- here
-				
-				Position of $\bo{r}_K$ is given as:
-				
-				\begin{equation}
-					\bo{r}_K = \begin{bmatrix}
-						l \sin (\varphi) \\ 
-						-l \cos (\varphi) 
-					\end{bmatrix}
-				\end{equation}
-				
-				Differentiating the position we can find its velocity:
-				
-				\begin{equation}
-					\dot{\bo{r}}_K = \begin{bmatrix}
-						 l \dot \varphi \cos (\varphi) \\ 
-						 l \dot \varphi \sin (\varphi) 
-					\end{bmatrix}
-				\end{equation}
-				
-				
-			\end{column}
-		\end{columns}
-		
+		It is also easy to find examples where  $ ^{\mathcal T_{i-1}}\bo{T}_i = ^{\mathcal T_{i-1}}\bo{C}_i \ \bo{R}_x (\varphi_i)$ where $^{\mathcal T_{i-1}}\bo{C}_i = const$ that depicts how the child link is oriented when $\varphi_i = 0$. We can use this constant orientation offset to change pose of the robot corresponding to zero joint angles, as well as to account for geometric quirks of the linkage.
 		
 	\end{flushleft}
 \end{frame}
 
 
 
-\begin{frame}{One link robot}
+\begin{frame}{Rotation joints}
 	%\framesubtitle{1st order}
 	\begin{flushleft}
 		
-		The forward kinematics can also be solved via rotation matrices:
-		
-		\begin{equation}
-			\bo{r}_K = 
-			\ma{\cos(\varphi)}{-\sin (\varphi)}{\sin (\varphi)}{\cos(\varphi)}
-			\begin{bmatrix}
-				0 \\ 
-				-l 
-			\end{bmatrix}
-		=
-			\begin{bmatrix}
-				l \sin (\varphi) \\ 
-				-l \cos (\varphi) 
-			\end{bmatrix}
-		\end{equation}
-		
-		
-		
-		
-	\end{flushleft}
-\end{frame}
-
-
-
-\begin{frame}{Two link robot}
-	%\framesubtitle{1st order}
-	\begin{flushleft}
-		
-	
-		\begin{columns}
-			\begin{column}{0.4\textwidth}
-				\input{fig_twolink}
-			\end{column}
-			\begin{column}{0.6\textwidth}  %%<--- here
-				
-					Let us consider a double-pendulum, described with angles $q_1$, $q_2$, with joints $O_1$, $O_2$ and \emph{end effector} $\bo{r}_K$, defined as before. The position of $K$ is given as:
-				
-					
-					\begin{equation*}
-						\bo{r}_K = \begin{bmatrix}
-							l_1 \sin (q_1) + l_2 \sin (q_1+q_2) \\ 
-							l_1 \cos (q_1) + l_2 \cos (q_1+q_2) 
-						\end{bmatrix}
-					\end{equation*}
-				
-			\end{column}
-		\end{columns}
-		
-		
-	\end{flushleft}
-\end{frame}
-
-
-
-\begin{frame}{Two link robot}
-	%\framesubtitle{1st order}
-	\begin{flushleft}
-		
-		Velocity of the end effector is found by differentiation:
-		
-				\begin{equation}
-					\dot{\bo{r}}_K = 
-					\begin{bmatrix}
-						l_1 \dot q_1\cos (q_1) + l_2 (\dot q_1+\dot q_2) \cos (q_1+q_2) \\ 
-					  - l_1 \dot q_1\sin (q_1)  - l_2 (\dot q_1+\dot q_2) \sin (q_1+q_2) 
-					\end{bmatrix}
-				\end{equation}
-		
-		If we introduce different variables $\varphi_1 = q_1$ and $\varphi_2 = q_1 + q_2$, the position and velocity of the end effector will take a simpler form:
-		
-		\begin{equation}
-			\bo{r}_K = \begin{bmatrix}
-				l_1 \sin (\varphi_1) + l_2 \sin (\varphi_2) \\ 
-				l_1 \cos (\varphi_1) + l_2 \cos (\varphi_2) 
-			\end{bmatrix}
-		\end{equation}
-		
-		\begin{equation}
-			\dot{\bo{r}}_K = 
-			\begin{bmatrix}
-				l_1 \dot \varphi_1\cos (\varphi_1) + l_2 \dot \varphi_2 \cos (\varphi_2) \\ 
-			  - l_1 \dot \varphi_1\sin (\varphi_1)  - l_2 \dot \varphi_2 \sin (\varphi_2) 
-			\end{bmatrix}
-		\end{equation}
-		
-		\emph{The form of the kinematics depends on the choice of coordinates}. In this example $q_1$, $q_2$ are relative (joint) angles, and $\varphi_1$, $\varphi_2$ are absolute orientation.
-		
-	\end{flushleft}
-\end{frame}
-
-
-
-\begin{frame}{Two link robot}
-	%\framesubtitle{1st order}
-	\begin{flushleft}
-		
-		The forward kinematics can also be solved via rotation matrices:
-		
-		$$
-			\bo{r}_K = 
-			\ma{\cos(q_1)}{-\sin (q_1)}{\sin (q_1)}{\cos(q_1)}
-			\begin{bmatrix}
-				0 \\ 
-				-l_1 
-			\end{bmatrix}
-		+$$
-		$$+
-		\ma{\cos(q_1+q_2)}{-\sin (q_1+q_2)}{\sin (q_1+q_2)}{\cos(q_1+q_2)}
-		\begin{bmatrix}
-			0 \\ 
-			-l_2 
-		\end{bmatrix}
-			=$$
-			$$
-			=
-			\begin{bmatrix}
-				l_1 \dot q_1\cos (q_1) + l_2 (\dot q_1+\dot q_2) \cos (q_1+q_2) \\ 
-				- l_1 \dot q_1\sin (q_1)  - l_2 (\dot q_1+\dot q_2) \sin (q_1+q_2) 
-			\end{bmatrix}
-		$$
-		
-		where:
-		
-		$$ \ma{\cos(q_1+q_2)}{-\sin (q_1+q_2)}{\sin (q_1+q_2)}{\cos(q_1+q_2)}  =$$
-		$$=
-		\ma{\cos(q_1)}{-\sin (q_1)}{\sin (q_1)}{\cos(q_1)}
-		\ma{\cos(q_2)}{-\sin (q_2)}{\sin (q_2)}{\cos(q_2)}
-		$$ 
-		
-		
-		
-		
-		
-	\end{flushleft}
-\end{frame}
-
-
-
-\begin{frame}{Angular velocity}
-	%\framesubtitle{1st order}
-	\begin{flushleft}
-		
-		Angular velocity of a rigid body is the rate of change of its orientation. In the last example, the orientation of the first link is given as $q_1$ and orientation of the second body - as $q_1 + q_2$. The rate of change of the orientation is found by differentiating these quantities:
-		
-		\begin{equation}
-			\omega_1 = \dot q_1
-		\end{equation}
-		\begin{equation}
-			\omega_2 = \dot q_1 + \dot q_2  
-		\end{equation}
-		
-		This is so simple because we have an explicit expression defining orientation of the body; we will see next lecture that it is more difficult in 3D.
+		Let's draw examples!
 		
 	\end{flushleft}
 \end{frame}
