--- a/Slides/Linkages3D/main.tex
+++ b/Slides/Linkages3D/main.tex
@@ -242,9 +242,9 @@
 		\begin{equation}
 			\bo{R}_x (\varphi_x) = 
 			\begin{bmatrix}
-				\cos \varphi_x & -\sin \varphi_x & 0 \\
-				\sin \varphi_x & \cos \varphi_x & 0 \\
-				0 & 0 & 1
+				1 & 0 & 0 \\
+				0 & \cos \varphi_x & -\sin \varphi_x \\
+				0 & \sin \varphi_x & \cos \varphi_x 
 			\end{bmatrix}
 		\end{equation}
 	
@@ -260,9 +260,9 @@
 \begin{equation}
 	\bo{R}_z (\varphi_z) = 
 	\begin{bmatrix}
-		1 & 0 & 0 \\
-		0 & \cos \varphi_z & -\sin \varphi_z \\
-		0 & \sin \varphi_z & \cos \varphi_z 
+		\cos \varphi_z & -\sin \varphi_z & 0 \\
+		\sin \varphi_z & \cos \varphi_z & 0 \\
+		0 & 0 & 1
 	\end{bmatrix}
 \end{equation}
 
