--- a/Slides/KinematicsAndTasks/settings.tex
+++ b/Slides/KinematicsAndTasks/settings.tex
@@ -24,8 +24,9 @@
 \definecolor{myblue}{RGB}{240, 240, 255}
 \definecolor{mygreen}{RGB}{0, 200, 0}
 \definecolor{mygreen2}{RGB}{205, 255, 200}
-\definecolor{mygray}{gray}{0.8}
+%\definecolor{mygray}{gray}{0.8}
 % \definecolor{mydarkgray}{gray}{0.4}
+\definecolor{mygray}{RGB}{160, 160, 160}
 \definecolor{mydarkgray}{RGB}{80, 80, 160}
 
 \setbeamertemplate{itemize items}[default]
